[package]
name = "sukkirisu"
version = "0.1.0"
authors = ["kanon22 <k.sasaki1397@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10.4"
tokio = {version = "0.2.13", features = ["macros"]}
scraper = "0.11.0"
regex = "1"
