[package]
name = "sukkirisu"
version = "0.1.0"
authors = ["kanon22 <k.sasaki1397@gmail.com>"]
edition = "2018"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10.4"
tokio = {version = "0.2.13", features = ["macros"]}
scraper = "0.11.0"
regex = "1"
lambda_runtime = "^0.1"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
log = "^0.4"
simple_logger = "^1"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
